[tool.poetry]
name = "lqts"
version = "1.0.57"
description = ""
authors = ["Bradley L Campbell <bradley.campbell@navy.mil>"]
include = ["lqts/version.py", "lqts/html/locutus.png", "lqts/html/locutus.ico"]

[tool.poetry.scripts]
qsub = "lqts.commands.qsub:qsub"
qsub-multi = "lqts.commands.qsub:qsub_multi"
qsub-cmulti = "lqts.commands.qsub:qsub_cmulti"
qsub-argfile = "lqts.commands.qsub:qsub_argfile"
qsub-test = "lqts.commands.qsub:qsub_test"
qstart = "lqts.commands.qstart:qstart"
qstat = "lqts.commands.qstat:qstat"
qclear = "lqts.commands.qclear:qclear"
qdel = "lqts.commands.qdel:qdel"
qworkers = "lqts.commands.qworkers:qworkers"
qwait = "lqts.commands.qwait:qwait"
qsummary = "lqts.commands.qsummary:qsummary"
qpriority = "lqts.commands.qpriority:qpriority"

[tool.poetry.dependencies]
python = "^3.12"
# fastapi = "0.78.0"
click = "8.1.7"
# Jinja2 = "3.1.2"
# pydantic = "1.9.1"
# starlette = "0.19.1"
tqdm = "4.64.0"
# uvicorn = "0.17.6"
fastapi = "0.111"
# starlette = "0.26.1"
pydantic = "1.10.16"
jinja2 = "3.1.2"
ujson = "5.10.0"
requests = "2.32.3"
psutil = "5.9.8"
urllib3 = "2.2.2"
uvicorn = "0.17.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.10.1"
m2r = "^0.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
